--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
       <script src="./scripts/Letra.js"></script>
       <script src="./scripts/Marcador.js"></script>
       <script src="./scripts/Palabras.js"></script>
-
       <!--<script src="./scripts/prueba.js"></script>-->
       <script src="./scripts/main.js"></script>
 
-      <div id="marcador"><h2>Marcador</h2></div>
+      <div id="marcador">
+        <h2>Marcador</h2>
+        <ul id="listaPalabras"></ul>
+      </div>
     </div>
   </body>
 </html>
