--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <script src="./scripts/Letra.js"></script>
       <script src="./scripts/Marcador.js"></script>
       <script src="./scripts/Palabras.js"></script>
+      <script src="./scripts/BuscaPalabras.js"></script>
       <!--<script src="./scripts/prueba.js"></script>-->
       <script src="./scripts/main.js"></script>
 
